<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_fluxo_portaria">
        <menu>
            <item
                android:id="@+id/nav_checkIn"
                android:icon="@drawable/outline_home_24"
                android:title="@string/menu_operacao"
                app:actionLayout="@layout/menu_action_arrow" />
            <item
                android:id="@+id/nav_autorizacao"
                android:icon="@drawable/outline_checklist_rtl_24"
                android:title="@string/menu_pendencias"
                app:actionLayout="@layout/menu_action_arrow" />
            <item
                android:id="@+id/nav_historico"
                android:icon="@drawable/outline_list_alt_24"
                android:title="@string/menu_historico"
                app:actionLayout="@layout/menu_action_arrow" />
        </menu>
    </item>

  

</menu>
